got baka preloaded and plotted, lovely dependency management

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script data-main="src/depend" src="src/lib/require.js"></script>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="sty/styles.css">
 </head>
 
  <body>
