got baka moving animating time-dependent across canvas

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <link rel="stylesheet" type="text/css" href="sty/styles.css">
 </head>
 
+<canvas id="gameCanvas">
+</canvas>
+    
  <body>
  <textarea rows="16" cols="90" id="logger">Logs go here</textarea>
  </body>
